-HTML: Create a filters bar. Add into it Select menu.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+.title{
+    color: #28b1dd;
+}
+
+#filter {
+    background-color: #28b1dd;
+} 
+
 #site_main{
     background-color: #dddddd;    
 }
